unpackaged/main/default/objects/Document_Checklist_Template__c/Document_Checklist_Template__c.object-meta.xml
<CustomObject>
    <description>This Object will maintain information about Document Checklist Template for IDB Invest Implementation.</description>
    <label>Document Checklist Template</label>
    <nameField>
        <displayFormat>DCT-{000}</displayFormat>
        <label>Template Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Checklist Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>