unpackaged/main/default/objects/Document_Checklist_Template__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Review</fullName>
                <default>true</default>
                <label>Initial Review</label>
            </value>
            <value>
                <fullName>Structuring</fullName>
                <label>Analysis &amp; Structuring</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>