unpackaged/main/default/objects/Document_Checklist_Template__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Family_Asset_Class__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Finance Loan</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Fund Financing</fullName>
            </value>
            <value>
                <fullName>Pre-Export Finance (Capex)</fullName>
            </value>
            <value>
                <fullName>Accounts Receivable</fullName>
            </value>
            <value>
                <fullName>Accounts Payable</fullName>
            </value>
            <value>
                <fullName>Working Capital Liquidity Lines</fullName>
            </value>
            <value>
                <fullName>Import Finance</fullName>
            </value>
            <value>
                <fullName>Pre-Export Finance</fullName>
            </value>
            <value>
                <fullName>TFFP loan</fullName>
            </value>
            <value>
                <fullName>Warehousing Line</fullName>
            </value>
            <value>
                <fullName>First Demand Guarantee</fullName>
            </value>
            <value>
                <fullName>Trade Related Guarantees</fullName>
            </value>
            <value>
                <fullName>Liquidity Line</fullName>
            </value>
            <value>
                <fullName>Corporate Guarantee</fullName>
            </value>
            <value>
                <fullName>Structured Guarantee</fullName>
            </value>
            <value>
                <fullName>Bid Bond</fullName>
            </value>
            <value>
                <fullName>Performance Bond</fullName>
            </value>
            <value>
                <fullName>Bond</fullName>
            </value>
            <value>
                <fullName>Fundo de Investimento em Direitos Creditórios - FIDC</fullName>
            </value>
            <value>
                <fullName>Collateralized Loan Obligation - CLO</fullName>
            </value>
            <value>
                <fullName>Diversified Payment Rights - DPR</fullName>
            </value>
            <value>
                <fullName>Asset Backed Securities - ABS</fullName>
            </value>
            <value>
                <fullName>Debt Fund Participation</fullName>
            </value>
            <value>
                <fullName>Common Equity</fullName>
            </value>
            <value>
                <fullName>Preferred Equity</fullName>
            </value>
            <value>
                <fullName>Equity investment funds</fullName>
            </value>
            <value>
                <fullName>Loan - Mezzanine</fullName>
            </value>
            <value>
                <fullName>Loan - Perpetual</fullName>
            </value>
            <value>
                <fullName>Loan - Convertible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>