unpackaged/main/default/objects/Document_Checklist_Template__c/fields/Product_Family_Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Asset_Class__c</fullName>
    <label>Product Family (Asset Class)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Structured Trade Finance</fullName>
            </value>
            <value>
                <fullName>Supply Chain Finance</fullName>
            </value>
            <value>
                <fullName>Traditional Trade Finance</fullName>
            </value>
            <value>
                <fullName>Line of Credit</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Bond</fullName>
            </value>
            <value>
                <fullName>Structured Finance</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Mezzanine Loan</fullName>
            </value>
            <value>
                <fullName>Mezzanine Bond</fullName>
            </value>
            <value>
                <fullName>Direct Mobilization</fullName>
            </value>
            <value>
                <fullName>Indirect Mobilization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>