unpackaged/main/default/objects/Document_Checklist_Template__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Line of Credit</fullName>
            </value>
            <value>
                <fullName>Guarantees (sell protection = IDBI issuer = buy risk)</fullName>
            </value>
            <value>
                <fullName>Debt Securities</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Mezzanine</fullName>
            </value>
            <value>
                <fullName>Mobilization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>