unpackaged/main/default/objects/Document_Checklist_Template__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agribusiness</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>TMT</fullName>
            </value>
            <value>
                <fullName>Tourism</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Non-Banks FIs</fullName>
            </value>
            <value>
                <fullName>Funds</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Social Infrastructure</fullName>
            </value>
            <value>
                <fullName>Water and Sanitation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>