unpackaged/main/default/objects/Document_Checklist_Template__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporates</fullName>
            </value>
            <value>
                <fullName>Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Non-bank FIs</fullName>
                <isActive>false</isActive>
                <label>Non-bank FIs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>