unpackaged/main/default/objects/Document_Checklist_Template__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>