unpackaged/main/default/objects/Document_Checklist_Template__c/validationRules/Status_Cannot_Be_Published_On_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Cannot_Be_Published_On_Creation</fullName>
    <active>true</active>
    <description>This Validation rule is to restrict the selection of the status value as Published</description>
    <errorConditionFormula>AND(ISNEW(),ISPICKVAL(Status__c,'Published'))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status Cannot Be Published On Creation</errorMessage>
</ValidationRule>