unpackaged/main/default/objects/Document_Checklist_Template__c/validationRules/Update_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Update_Restriction</fullName>
    <active>true</active>
    <description>This Validation rule is to restrict the further changes on Published templates</description>
    <errorConditionFormula>AND(TEXT(PRIORVALUE(Status__c )) = 'Published',NOT(ISNEW()))</errorConditionFormula>
    <errorMessage>Published document checklist template cannot be changed</errorMessage>
</ValidationRule>