unpackaged/main/default/objects/Document_Checklist_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Segment__c</columns>
    <columns>Sector__c</columns>
    <columns>Template_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Phase__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>