unpackaged/main/default/objects/Document_Checklist_Template__c/listViews/Draft_Checklist_Templates.listView-meta.xml
<ListView>
    <fullName>Draft_Checklist_Templates</fullName>
    <columns>NAME</columns>
    <columns>Segment__c</columns>
    <columns>Sector__c</columns>
    <columns>Template_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Phase__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Draft Checklist Templates</label>
</ListView>